--- a/login/login.css
+++ b/login/login.css
@@ -23,6 +23,10 @@ h1 {
 
 h2 {
 	text-align: center;
+	border: 2px solid gray;
+	font-size: 30px;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 
 p {
@@ -222,6 +226,7 @@ input:focus {
 	background-image: url("woman.png");
 	background-size: cover;
 	background-repeat: no-repeat;
+	text-align: left;
 
 }
 
