adiciona validação nos campos de email e senha

--- a/login/login.css
+++ b/login/login.css
@@ -249,6 +249,13 @@ input:focus {
 	width: 90px;
 }
 
+input:invalid {
+  border: 2px solid red;
+}
+input:invalid:focus {
+  border: 2px solid red;
+}
+
 footer {
     background-color: #222;
     color: #fff;
