--- a/login/login.css
+++ b/login/login.css
@@ -83,7 +83,7 @@ form {
 }
 
 input {
-	background-color: #white;
+	background-color: white;
 	border: 2px solid gray;
 	border-radius: 5px;
 	padding: 12px 15px;
